--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Effective JavaScript: Frogger</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+<body class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <p>This is the Frogger Game. I hope you enjoy.</p>
+    </div>
+    <main class="col-md-7 main-game">
+      <script src="js/jQuery.js"></script>
+      <script src="js/resources.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/engine.js"></script>
+    </main>
+    <div class="col-md-1">
+      <div><button id="start-button" type="button">Start</button></div>
+      <div><button id="stop-button" type="button">Stop</button></div>
+    </div>
+  </div>
+
 </body>
 </html>
