--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <p>This is the Frogger Game. I hope you enjoy.</p>
+    <div class="row">
+        <div class="col-md-4">
+            <p>This is the Frogger Game. I hope you enjoy.</p>
+        </div>
+        <main class="col-md-7 main-game">
+            <script src="js/jQuery.js"></script>
+            <script src="js/resources.js"></script>
+            <script src="js/app.js"></script>
+            <script src="js/engine.js"></script>
+        </main>
+        <div class="col-md-1 controls">
+            <div id="score"></div>
+            <div id="lives"></div>
+            <div><button id="start-button" type="button">Start</button></div>
+            <div><button id="stop-button" type="button">Stop</button></div>
+        </div>
     </div>
-    <main class="col-md-7 main-game">
-      <script src="js/jQuery.js"></script>
-      <script src="js/resources.js"></script>
-      <script src="js/app.js"></script>
-      <script src="js/engine.js"></script>
-    </main>
-    <div class="col-md-1">
-      <div><button id="start-button" type="button">Start</button></div>
-      <div><button id="stop-button" type="button">Stop</button></div>
-    </div>
-  </div>
 
 </body>
 </html>
