Create basic countdown timer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <script src="js/engine.js"></script>
         </main>
         <div class="col-md-1 controls">
+            <div>Timer: <span id="timer"></span> minutes</div>
             <div id="score"></div>
             <div id="lives"></div>
             <div><button id="start-button" type="button">Start</button></div>
